[gd_scene load_steps=12 format=2]

[ext_resource path="res://maps/Map01.gd" type="Script" id=1]
[ext_resource path="res://Eyes/Eyes.gd" type="Script" id=2]
[ext_resource path="res://assets/outer_eye.png" type="Texture" id=3]
[ext_resource path="res://assets/right_eye.png" type="Texture" id=4]
[ext_resource path="res://Eyes/inner_eye.gd" type="Script" id=5]
[ext_resource path="res://Eyes/Eyes.tscn" type="PackedScene" id=6]
[ext_resource path="res://object.gd" type="Script" id=7]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 300, 0, 0, 0, 0, 0, -259.808, 150, 0, 0, 0, 0, -267.302, -136.197, 0, 0, 0, 0, 172.073, -245.746, 0, 0, 0, 0, 300, 0 )
}

[sub_resource type="Shader" id=2]

code = "shader_type canvas_item;

uniform sampler2D eye_mask;
uniform vec2 distance;

void fragment() {
	vec2 uv_offset = UV + clamp(normalize(distance), vec2(-0.3), vec2(0.3));
	vec4 tex_color = texture(TEXTURE, uv_offset);
	float alpha = texture(eye_mask, UV).a * tex_color.a;
	COLOR = vec4(tex_color.rgb, alpha);
}"

[sub_resource type="ShaderMaterial" id=3]

render_priority = 0
shader = SubResource( 2 )
shader_param/distance = null
shader_param/eye_mask = ExtResource( 3 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = SubResource( 2 )
shader_param/distance = null
shader_param/eye_mask = ExtResource( 3 )
_sections_unfolded = [ "shader_param" ]

[node name="Map01" type="Node2D"]

position = Vector2( 532.514, 271.824 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
radius = 300
OutLine = Color( 1, 0.121094, 0.121094, 1 )
Width = 20.0
vertices = PoolVector2Array( 300, 0, -259.808, 150, -267.302, -136.197, 172.073, -245.746 )

[node name="Path2D" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="collision01" type="PathFollow2D" parent="Path2D" index="0"]

position = Vector2( 284.66, 4.11031 )
rotation = 2.87979
offset = 15.9093
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="Path2D/collision01" index="0"]

position = Vector2( -16.4378, 9.16602 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="Path2D/collision01/Area2D" index="0"]

editor/display_folded = true
polygon = PoolVector2Array( 12.1847, 37.2156, 49.1248, -10.0648, 9.72443, -40.8481, -27.2156, 6.43225 )
uv = PoolVector2Array(  )
color = Color( 1, 0.117647, 0.117647, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Texture", "Transform" ]

[node name="Eyes" type="Node2D" parent="Path2D/collision01/Area2D/Polygon2D" index="0"]

position = Vector2( -49.7263, -63.1802 )
rotation = 0.557703
scale = Vector2( 0.14, 0.14 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="LeftEye" type="Sprite" parent="Path2D/collision01/Area2D/Polygon2D/Eyes" index="0"]

position = Vector2( 518.788, 233.762 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="inner_eye2" type="Sprite" parent="Path2D/collision01/Area2D/Polygon2D/Eyes/LeftEye" index="0"]

material = SubResource( 3 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Material", "Transform" ]
look_at = Vector2( 0, 0 )

[node name="RightEye" type="Sprite" parent="Path2D/collision01/Area2D/Polygon2D/Eyes" index="1"]

position = Vector2( 674.63, 229.661 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="inner_eye" type="Sprite" parent="Path2D/collision01/Area2D/Polygon2D/Eyes/RightEye" index="0"]

material = SubResource( 4 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Material" ]
look_at = Vector2( 0, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Path2D/collision01/Area2D" index="1"]

build_mode = 0
polygon = PoolVector2Array( 12.1847, 37.2156, 49.1248, -10.0648, 9.72443, -40.8481, -27.2156, 6.43225 )
_sections_unfolded = [ "Transform" ]

[node name="collision02" type="PathFollow2D" parent="Path2D" index="1"]

position = Vector2( -261.381, 89.913 )
rotation = 2.87979
offset = 636.37
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Area2D" type="Area2D" parent="Path2D/collision02" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Polygon2D" type="Polygon2D" parent="Path2D/collision02/Area2D" index="0"]

polygon = PoolVector2Array( 12.1847, 37.2156, 49.1248, -10.0648, 9.72443, -40.8481, -27.2156, 6.43225 )
uv = PoolVector2Array(  )
color = Color( 1, 0.117647, 0.117647, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Eyes" parent="Path2D/collision02/Area2D/Polygon2D" index="0" instance=ExtResource( 6 )]

position = Vector2( -51.5882, -63.1776 )
rotation = 0.557703
scale = Vector2( 0.14, 0.14 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Path2D/collision02/Area2D" index="1"]

build_mode = 0
polygon = PoolVector2Array( 12.1847, 37.2156, 49.1248, -10.0648, 9.72443, -40.8481, -27.2156, 6.43225 )

[node name="object" type="PathFollow2D" parent="Path2D" index="2"]

position = Vector2( -261.216, 96.2358 )
rotation = 2.87979
offset = 630.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]
speed = 350

[node name="square" type="Polygon2D" parent="Path2D/object" index="0"]

position = Vector2( -0.578217, 8.85904 )
rotation = -3.12924e-06
scale = Vector2( 0.6, 0.6 )
polygon = PoolVector2Array( 12.1847, 37.2156, 49.1248, -10.0648, 9.72443, -40.8481, -27.2156, 6.43225 )
uv = PoolVector2Array(  )
color = Color( 0.0416934, 0.0343323, 0.976562, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Score" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = -257.0
margin_right = 30.0
margin_bottom = -243.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "400"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="hit_area" from="Path2D/object" to="." method="_on_object_hit_area"]


